few positioning corrected on tablet and custom scrollbar

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -18,7 +18,6 @@
   display: flex;
 
   height: 100%;
-  // min-width: 280px;
   width: 17.5rem;
 
   color: var(--text);
@@ -68,7 +67,6 @@
 .hexagone {
   display: inline-block;
   width: 10rem;
-  // color: red;
   margin: 1rem;
   filter: url(#round);
 
@@ -104,7 +102,7 @@
   .container {
     flex-direction: column;
 
-    height: 100%;
+    overflow-y: auto;
   }
 
   .hexagone {
@@ -161,7 +159,7 @@
   .asideContainer {
     width: 100%;
 
-    overflow-y: auto;
+    min-height: 27.75rem;
   }
 }
 
