--- a/src/styles/Intro.module.scss
+++ b/src/styles/Intro.module.scss
@@ -6,7 +6,6 @@ $widthContainer: 200px;
 
 .shadow {
   z-index: 20;
-  height: 100%;
   width: $widthContainer;
   filter: drop-shadow(3px 5px 5px var(--shadow-style));
 }
