--- a/src/styles/Tools.module.scss
+++ b/src/styles/Tools.module.scss
@@ -7,7 +7,6 @@
 
   display: flex;
   justify-content: flex-start;
-  align-items: center;
 
   background: var(--tools-secondary);
 
